--- a/src/pages/instruments/01_cpis_en.html
+++ b/src/pages/instruments/01_cpis_en.html
@@ -6483,7 +6483,7 @@
 
                 <h2 class="mt-10 mb-4 text-2xl font-bold text-gray-700">15. THE CHILD&#39;S RELATIONSHIP WITH THEIR FAMILY AND CHANCES FOR (RE)INTEGRATION IN A FAMILY ENVIRONMENT</h2>
 
-                <div class="grid grid-cols-2 gap-4 items-center mt-10">
+                <div class="grid grid-cols-2 gap-4 mt-10">
                     <div>
                         SK1. In the past six months, has the specialist who monitors the case or other Makhala/district level specialist paid a home visit and talked face-to-face with
                         this child&#39;s parents, grandparents, aunts or extended family? </div>
@@ -6503,7 +6503,7 @@
                     </div>
                 </div>
 
-                <div class="grid grid-cols-2 gap-4 items-center mt-10">
+                <div class="grid grid-cols-2 gap-4 mt-10">
                     <div>
                         SK2. In the past six months, has the child visited or has been visited by the parents or another adult family member? </div>
                     <div class="col-span-1 flex flex-col gap-2">
@@ -6526,25 +6526,30 @@
                     </div>
                 </div>
 
-                <div class="grid grid-cols-2 gap-4 items-center mt-10">
+                <div class="grid grid-cols-2 gap-4 mt-10">
                     <div>
-                        SK3. Does the child have brothers and/or sisters in the child care system? If yes, how many brothers and how many sisters? </div>
+                        SK3. Does the child have brothers and/or sisters in the child care system? If yes, how many brothers and how many sisters?
+                    </div>
                     <div class="col-span-1 flex flex-col gap-2">
                         <div class="flex items-center">
                             <input id="sk3-1" type="radio" value="1" name="sk3" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                            <label for="sk3-1" class="ms-2 text-sm text-gray-900">1. Yes, brothers</label>
+                            <label for="sk3-1" class="ms-2 text-sm text-gray-900">1. Yes</label>
                         </div>
-                        <input type="text" id="sk3_1" name="sk3_1"
-                               class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
-                        <div class="flex items-center">
-                            <input id="sk3-2" type="radio" value="2" name="sk3" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                            <label for="sk3-2" class="ms-2 text-sm text-gray-900">2. Yes, sisters</label>
+                        <div class="grid grid-cols-2 gap-4 items-center">
+                            <div class="text-sm text-gray-700 text-center">Brothers</div>
+                            <div class="text-sm text-gray-700 text-center">Sisters</div>
                         </div>
-                        <input type="text" id="sk3_2" name="sk3_2"
-                               class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                        <div class="grid grid-cols-2 gap-4 items-center">
+                            <div>
+                                <input type="text" id="sk3_1" name="sk3_1" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                            </div>
+                            <div>
+                                <input type="text" id="sk3_2" name="sk3_2" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                            </div>
+                        </div>
                         <div class="flex items-center">
                             <input id="sk3-3" type="radio" value="3" name="sk3" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                            <label for="sk3-3" class="ms-2 text-sm text-gray-900">3. Neither brothers, nor sisters</label>
+                            <label for="sk3-3" class="ms-2 text-sm text-gray-900">2. No</label>
                         </div>
                         <div class="flex items-center">
                             <input id="sk3-4" type="radio" value="9" name="sk3" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -6553,7 +6558,7 @@
                     </div>
                 </div>
 
-                <div class="grid grid-cols-2 gap-4 items-center mt-10">
+                <div class="grid grid-cols-2 gap-4 mt-10">
                     <div>
                         SK4. Are one or more of these siblings living in the same service as the child? </div>
                     <div class="col-span-1 flex items-center gap-4">
@@ -6568,7 +6573,7 @@
                     </div>
                 </div>
 
-                <div class="grid grid-cols-2 gap-4 items-center mt-10">
+                <div class="grid grid-cols-2 gap-4 mt-10">
                     <div>
                         SK5. Is there any information available regarding how the child&#39;s relationship with their siblings who are living in different services, is maintained or
                         facilitated? </div>
@@ -6588,7 +6593,7 @@
                     </div>
                 </div>
 
-                <div class="grid grid-cols-2 gap-4 items-center mt-10">
+                <div class="grid grid-cols-2 gap-4 mt-10">
                     <div>
                         SK6. In the past six months, did the child meet with siblings? </div>
                     <div class="col-span-1 flex flex-col gap-2">
@@ -6607,7 +6612,7 @@
                     </div>
                 </div>
 
-                <div class="grid grid-cols-2 gap-4 items-center mt-10">
+                <div class="grid grid-cols-2 gap-4 mt-10">
                     <div>
                         SK7. Since the child&#39;s admission into the system, living conditions of the origin family/mother/father/caregiver have… </div>
                     <div class="col-span-1 flex flex-col gap-2">
@@ -6634,7 +6639,7 @@
                     </div>
                 </div>
 
-                <div class="grid grid-cols-2 gap-4 items-center mt-10">
+                <div class="grid grid-cols-2 gap-4 mt-10">
                     <div>
                         SK8. Has a list of relatives from the extended family (aunts, uncles, grandparents, cousins etc) been identified for the child? </div>
                     <div class="col-span-1 flex items-center gap-4">
@@ -6649,7 +6654,7 @@
                     </div>
                 </div>
 
-                <div class="grid grid-cols-2 gap-4 items-center mt-10">
+                <div class="grid grid-cols-2 gap-4 mt-10">
                     <div>
                         SK9. Does the child have an identified family (with names and address) engaged in working towards a possible (re)integration? </div>
                     <div class="col-span-1 flex flex-col gap-2">
