--- a/src/pages/instruments/08_pfq.html
+++ b/src/pages/instruments/08_pfq.html
@@ -34,7 +34,7 @@
             </div>
 
             <div class="px-6 mt-5">
-                <table id="family_home_list" aria-describedby="family_home" style="width: 100%;" class="stripe hover w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+                <table id="patronat_family_list" aria-describedby="patronat_family" style="width: 100%;" class="stripe hover w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
                     <thead class="text-xs text-gray-700 uppercase bg-gray-50">
                         <tr>
                             <th scope="col" class="px-6 py-3">
@@ -54,7 +54,7 @@
                             </th>
                         </tr>
                     </thead>
-                    <tbody id="family_home"></tbody>
+                    <tbody id="patronat_family"></tbody>
                 </table>
             </div>
 
