--- a/src/pages/instruments/09_eef.html
+++ b/src/pages/instruments/09_eef.html
@@ -19,35 +19,29 @@
 
             <div class="flex justify-between mt-10 px-5">
                 <h1 class="text-xl">
-                    <span class="t_pfq_list"></span>
+                    <span class="t_eef_list"></span>
                 </h1>
                 <div>
-                    <button class="bg-menuButton text-white px-3 py-1 rounded flex gap-3 items-center" id="add_patronat_family">
+                    <button class="bg-menuButton text-white px-3 py-1 rounded flex gap-3 items-center" id="add_evaluation">
                         <svg class="fill-white w-4 h-4" xmlns="http://www.w3.org/2000/svg"
                              viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
                             <path
                                   d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z" />
                         </svg>
-                        <span class="t_add_patronat_family"></span>
+                        <span class="t_add_evaluation"></span>
                     </button>
                 </div>
             </div>
 
             <div class="px-6 mt-5">
-                <table id="patronat_family_list" aria-describedby="patronat_family" style="width: 100%;" class="stripe hover w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+                <table id="evaluation_list" aria-describedby="evaluation" style="width: 100%;" class="stripe hover w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
                     <thead class="text-xs text-gray-700 uppercase bg-gray-50">
                         <tr>
                             <th scope="col" class="px-6 py-3">
-                                <span class="t_pin"></span>
+                                <span class="t_id"></span>
                             </th>
                             <th scope="col" class="px-6 py-3">
-                                <span class="t_first_name"></span>
-                            </th>
-                            <th scope="col" class="px-6 py-3">
-                                <span class="t_patronymics"></span>
-                            </th>
-                            <th scope="col" class="px-6 py-3">
-                                <span class="t_last_name"></span>
+                                <span class="t_institution"></span>
                             </th>
                             <th scope="col" class="px-6 py-3">
                                 <span class="t_actions"></span>
