--- a/src/pages/localCoordinator/01_dashboard.html
+++ b/src/pages/localCoordinator/01_dashboard.html
@@ -147,7 +147,7 @@
                     <span id="t2c34"></span>
                 </div>
                 <div class="bg-tableRow text-gray-600 text-center px-3 py-1.5 font-medium flex justify-center items-center">
-                    <button class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader" id="viewEdit_YPLS">
+                    <button class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader" id="viewEdit_YPLCS">
                         <span class="t_view"></span>
                     </button>
                 </div>
