--- a/src/pages/cityCollector/01_dashboard.html
+++ b/src/pages/cityCollector/01_dashboard.html
@@ -18,7 +18,7 @@
             <h1 class="px-5 text-xl mt-10">
                 <span class="t_service_level_view_data_collectors"></span>
             </h1>
-            
+
             <div class="grid grid-cols-7 w-full mt-10 px-5 gap-0.5">
                 <div class="bg-tableHeader flex items-center text-white px-3 py-1.5 font-medium col-span-2">
                     <span class="t_individual_level_questionnaires"></span>
@@ -76,7 +76,7 @@
                     <span id="t2c34"></span>
                 </div>
                 <div class="bg-tableRow text-gray-600 text-center px-3 py-1.5 font-medium flex justify-center items-center">
-                    <button class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader" id="viewEdit_YPLS">
+                    <button class="border border-gray-400 px-2 py-0.5 rounded bg-tableHeader/50 hover:bg-tableHeader" id="viewEdit_YPLCS">
                         <span class="t_view"></span>
                     </button>
                 </div>
@@ -102,7 +102,7 @@
                     </button>
                 </div>
 
-               
+
 
             </div>
         </div>
