--- a/src/pages/instruments/02_cibs_uz.html
+++ b/src/pages/instruments/02_cibs_uz.html
@@ -291,7 +291,7 @@
                         </div>
                         <div class="flex items-center">
                             <input id="lk15-4" type="radio" value="4" name="lk15" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                            <label for="lk15-4" class="ms-2 text-sm text-gray-900">4. Boshqasi bo&#39;lsa, ko&#39;rsatilsin</label>
+                            <label for="lk15-4" class="ms-2 text-sm text-gray-900">4. Other staff of the institution</label>
                         </div>
                         <div class="flex items-center">
                             <input id="lk15-5" type="radio" value="5" name="lk15" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -299,7 +299,7 @@
                         </div>
                         <div class="flex items-center">
                             <input id="lk15-6" type="radio" value="6" name="lk15" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                            <label for="lk15-6" class="ms-2 text-sm text-gray-900">6. Other, please specify: …</label>
+                            <label for="lk15-6" class="ms-2 text-sm text-gray-900">4. Boshqasi bo&#39;lsa, ko&#39;rsatilsin</label>
                         </div>
                         <div class="flex items-center">
                             <input type="text" id="lk15_other" name="lk15_other"
@@ -308,53 +308,6 @@
                     </div>
                 </div>
 
-                <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                    <div>LK16. Is there currently a decision regarding the placement of the child in alternative care, either in an institution or a family-type setting?</div>
-                    <div class="col-span-1 flex gap-4">
-                        <div class="flex items-center">
-                            <input id="lk16-1" type="radio" value="1" name="lk16" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                            <label for="lk16-1" class="ms-2 text-sm text-gray-900">1. Yes</label>
-                        </div>
-                        <div class="flex items-center">
-                            <input id="lk16-2" type="radio" value="2" name="lk16" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                            <label for="lk16-2" class="ms-2 text-sm text-gray-900">2. No</label>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="grid grid-cols-2 gap-4 mt-6">
-                    <div class="col-span-1 flex items-center">LK17. In what type of alternative care is the child currently placed?</div>
-                    <div class="col-span-1 flex flex-col gap-4">
-                        <div class="flex items-center">
-                            <input id="lk17-1" type="radio" value="1" name="lk17" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                            <label for="lk17-1" class="ms-2 text-sm text-gray-900">1. Children's home (Baby home) </label>
-                        </div>
-                        <div class="flex items-center">
-                            <input id="lk17-2" type="radio" value="2" name="lk17" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                            <label for="lk17-2" class="ms-2 text-sm text-gray-900">2. Mehribonlik house </label>
-                        </div>
-                        <div class="flex items-center">
-                            <input id="lk17-3" type="radio" value="3" name="lk17" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                            <label for="lk17-3" class="ms-2 text-sm text-gray-900">3. Muruvat house for children with disabilities </label>
-                        </div>
-                        <div class="flex items-center">
-                            <input id="lk17-4" type="radio" value="4" name="lk17" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                            <label for="lk17-4" class="ms-2 text-sm text-gray-900">4. Family-type children's home </label>
-                        </div>
-                        <div class="flex items-center">
-                            <input id="lk17-5" type="radio" value="5" name="lk17" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                            <label for="lk17-5" class="ms-2 text-sm text-gray-900">5. Patronat family </label>
-                        </div>
-                        <div class="flex items-center">
-                            <input id="lk17-6" type="radio" value="6" name="lk17" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                            <label for="lk17-6" class="ms-2 text-sm text-gray-900">6. Trusteeship/Guardianship care </label>
-                        </div>
-                        <div class="flex items-center">
-                            <input id="lk17-7" type="radio" value="7" name="lk17" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                            <label for="lk17-7" class="ms-2 text-sm text-gray-900">7. SOS children's villages/families</label>
-                        </div>
-                    </div>
-                </div>
 
                 <h2 class="mt-10 mb-4 text-2xl font-bold text-gray-700">3. BOLA OILASI HAQIDA MA&#39;LUMOT</h2>
 
@@ -380,7 +333,7 @@
                         </div>
                         <div class="flex items-center">
                             <input id="qfam1-5" type="radio" value="3" name="qfam1" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                            <label for="qfam1-5" class="ms-2 text-sm text-gray-900">SA5a ga O&#39;TING</label>
+                            <label for="qfam1-5" class="ms-2 text-sm text-gray-900">7. Boshqa holat, yozib ko&#39;rsatilsin: …</label>
                         </div>
                         <div class="flex items-center">
                             <input type="text" id="qfam1_other" name="qfam1_other"
@@ -388,7 +341,7 @@
                         </div>
                         <div class="flex items-center">
                             <input id="qfam1-6" type="radio" value="3" name="qfam1" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                            <label for="qfam1-6" class="ms-2 text-sm text-gray-900">7. Boshqa holat, yozib ko&#39;rsatilsin: …</label>
+                            <label for="qfam1-6" class="ms-2 text-sm text-gray-900">9. Ko&#39;rsatilmagan/Noma&#39;lum</label>
                         </div>
                     </div>
                 </div>
