--- a/src/pages/instruments/09_eef_en.html
+++ b/src/pages/instruments/09_eef_en.html
@@ -57,7 +57,7 @@
                 <div class="grid grid-cols-2 gap-4 items-center mt-6">
                     <div>I2. Institution code from the registry</div>
                     <div>
-                        <input type="text" id="i1" name="i1" value="Test instutution" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                        <input type="text" id="i1" name="i1" value="Test institution -- to be retrieved from the DB" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
                     </div>
                 </div>
         
