--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
                                       d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z" />
                             </svg>
                         </div>
-                        <input type="text" id="username" value="coordinator_cd"
+                        <input type="text" id="username" value=""
                                class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus-visible:border-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5">
                     </div>
                 </div>
@@ -38,7 +38,7 @@
                                       d="M144 144v48H304V144c0-44.2-35.8-80-80-80s-80 35.8-80 80zM80 192V144C80 64.5 144.5 0 224 0s144 64.5 144 144v48h16c35.3 0 64 28.7 64 64V448c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V256c0-35.3 28.7-64 64-64H80z" />
                             </svg>
                         </div>
-                        <input type="text" id="password" value="coordinator_cd"
+                        <input type="password" id="password" value=""
                                class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus-visible:border-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5">
                     </div>
                 </div>
