--- a/src/pages/_header.html
+++ b/src/pages/_header.html
@@ -1,6 +1,6 @@
 <div class="flex justify-between items-center h-full">
-    <div>
-        <span class="font-medium text-base px-4" id="header_username">Username</span>
+    <div class="w-3/4">
+        <span class="block font-medium text-base px-4" id="header_username">Username</span>
     </div>
     <div class="flex gap-4">
         <button class="flex items-center gap-2 text-white bg-gray-400 hover:bg-gray-500 focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-3 py-1 me-2 mr-3" id="back">
