--- a/src/pages/local/01_dashboard.html
+++ b/src/pages/local/01_dashboard.html
@@ -11,11 +11,11 @@
 </head>
 
 <body class="relative max-h-screen">
-    <div class="fixed top-0 right-0 left-0 bg-slate-200 h-10 z-50 shadow" id="header">
+    <div class="fixed top-0 right-0 left-0 bg-slate-200 h-14 z-50 shadow" id="header">
     </div>
-    <div class="relative w-full mt-10 pb-1 h-[calc(100vh-8.2rem)] overflow-y-auto">
+    <div class="relative w-full mt-14 pb-1 h-[calc(100vh-9.3rem)] overflow-y-auto">
 
-        <h1 class="px-5 text-xl mt-8">
+        <h1 class="px-5 text-xl mt-5">
             <span class="t_instruments">loading...</span>
         </h1>
 
@@ -327,7 +327,7 @@
                 <span class="t_export_data"></span>
             </button>
             <button id="users"
-                class="bg-gray-200 hover:bg-gray-300 px-4 py-3 rounded flex items-center justify-center gap-4 w-72">
+                class="bg-gray-200 hover:bg-gray-300 px-4 py-3 rounded hidden items-center justify-center gap-4 w-72">
                 <svg class="h-8 fill-sky-700" xmlns="http://www.w3.org/2000/svg"
                     viewBox="0 0 640 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
                     <path
