--- a/src/pages/local/01_dashboard.html
+++ b/src/pages/local/01_dashboard.html
@@ -310,7 +310,7 @@
     </div>
     <footer>
         <div class="flex gap-10 px-4 py-4 border-t border-gray-100">
-            <button class="bg-gray-200 hover:bg-gray-300 px-4 py-3 rounded w-72 flex items-center justify-center gap-4">
+            <button class="bg-gray-200 hover:bg-gray-300 px-4 py-3 rounded w-72 flex items-center justify-center gap-4" id="importData">
                 <svg class="h-8 fill-slate-500" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
                     <!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
                     <path
@@ -318,7 +318,7 @@
                 </svg>
                 <span class="t_import"></span>
             </button>
-            <button class="bg-gray-200 hover:bg-gray-300 px-4 py-3 rounded flex items-center justify-center gap-4 w-72">
+            <button class="bg-gray-200 hover:bg-gray-300 px-4 py-3 rounded flex items-center justify-center gap-4 w-72" id="exportData">
                 <svg class="h-8 fill-green-700" xmlns="http://www.w3.org/2000/svg"
                     viewBox="0 0 384 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
                     <path
