--- a/src/pages/instruments/07_ftch_en.html
+++ b/src/pages/instruments/07_ftch_en.html
@@ -144,8 +144,17 @@
                 <div class="grid grid-cols-2 gap-4 items-center mt-6">
                     <div>IFP1d. Type of settlement</div>
                     <div>
-                        <input type="text" id="ifp1d" name="ifp1d"
-                               class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                        <select id="ifp1d" name="ifp1d"
+                        class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                            <option class="t_choose"></option>
+                            <option class="t_settlement_type_10"></option>
+                            <option class="t_settlement_type_20"></option>
+                            <option class="t_settlement_type_21"></option>
+                            <option class="t_settlement_type_22"></option>
+                            <option class="t_settlement_type_23"></option>
+                            <option class="t_settlement_type_24"></option>
+                            <option class="t_settlement_type_31"></option>
+                        </select>
                     </div>
                 </div>
 
