--- a/src/pages/instruments/04_qmr_uz.html
+++ b/src/pages/instruments/04_qmr_uz.html
@@ -119,31 +119,30 @@
                 <div class="grid grid-cols-2 gap-4 items-center mt-6">
                     <div>I4a. Viloyat</div>
                     <div>
-                        <input type="text" id="i4a" name="i4a"
-                               class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                        <select id="i4a" name="i4a" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                            <option value="-9" class="t_choose">--- choose ---</option>
+                        </select>
                     </div>
                 </div>
                 <div class="grid grid-cols-2 gap-4 items-center mt-6">
                     <div>I4b. Tuman</div>
                     <div>
-                        <input type="text" id="i4b" name="i4b"
-                               class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                        <select id="i4b" name="i4b" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                            <option value="-9" class="t_choose">--- choose ---</option>
+                        </select>
                     </div>
                 </div>
                 <div class="grid grid-cols-2 gap-4 items-center mt-6">
                     <div>I4c. Settlement</div>
                     <div>
-                        <input type="text" id="i4c" name="i4c"
-                               class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                        <select id="i4c" name="i4c" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                            <option value="-9" class="t_choose">--- choose ---</option>
+                        </select>
                     </div>
                 </div>
-                <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                    <div>I4d. Type of settlement</div>
-                    <div>
-                        <input type="text" id="i4d" name="i4d"
-                               class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
-                    </div>
-                </div>
+
+                <input type="hidden" id="i4d" name="i4d" />
+
                 <div class="grid grid-cols-2 gap-4 items-center mt-6">
                     <div>I9. Tashkilot turi</div>
                     <div>
