--- a/src/pages/instruments/01_cpis_en.html
+++ b/src/pages/instruments/01_cpis_en.html
@@ -5646,8 +5646,7 @@
                             </select>
                         </td>
                         <td class="p-1">
-                            <input type="text" id="sh3_csd" name="sh3_csd"
-                                class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                            <input type="hidden" id="sh3_csd" name="sh3_csd" />
                         </td>
                         <td class="p-1">
                         </td>
